--- a/app/views/layouts/_admin_navbar.html.slim
+++ b/app/views/layouts/_admin_navbar.html.slim
@@ -15,7 +15,7 @@
         li= link_to "Специальности", admin_categories_path
         li= link_to "Страницы", admin_pages_path
         li= link_to "Роли", admin_roles_path
-        li= link_to "Адмиы", admin_admin_users_path
+        li= link_to "Админы", admin_admin_users_path
       ul.nav.pull-right
         li
           = link_to 'Выйти', destroy_admin_user_session_path, :method => :delete
